sonarqube fix #63