@@ -10,11 +10,10 @@ import fr.unice.polytech.kaleate.outils.Creneau;
 import java.util.*;
 import java.util.stream.Collectors;
 
-//TODO Il faut interfacer ou abstraire les Commandes pour pouvoir faire proprement le traitement des commandes avec
 
 public class CommandeSimple implements Observer, Commande {
     private ListeMenus menus;
-    private Utilisateur utilisateur; // TODO pour pouvoir faire des commandes selon les extensions, avoir l'utilisateur initial de la commande et le recepteur de la commande
+    private Utilisateur utilisateur;
     private StatutCommande statut = StatutCommande.EN_CREATION;
 
     private int id;
@@ -66,11 +65,7 @@ public class CommandeSimple implements Observer, Commande {
     }
     @Override
     public boolean modifiable(){
-        if(statut == StatutCommande.EN_CREATION ||statut == StatutCommande.VALIDEE ){
-            return true;
-        }else{
-            return false;
-        }
+        return statut == StatutCommande.EN_CREATION ||statut == StatutCommande.VALIDEE;
     }
     @Override
     public double getPrix(){
@@ -89,7 +84,6 @@ public class CommandeSimple implements Observer, Commande {
         return prix;
     }
 
-    //TODO remplir methode
     @Override
     public double getPrixSansReduction() {
         return 0;
@@ -121,7 +115,7 @@ public class CommandeSimple implements Observer, Commande {
         return utilisateur;
     }
     @Override
-    public Utilisateur getUtilisateurEmetteur() { return utilisateur;}
+    public Utilisateur getUtilisateurEmetteur() { return getUtilisateurRecepteur();}
     @Override
     public void setUtilisateurRecepteur(Utilisateur utilisateur) { this.utilisateur = utilisateur;}
     @Override
@@ -132,7 +126,6 @@ public class CommandeSimple implements Observer, Commande {
         return statut;
     }
 
-    //TODO n'est pas viable dans l'utilisation
     public void setStatut(StatutCommande statut) {
         this.statut = statut;
         if (statut.equals(StatutCommande.VALIDEE)){
@@ -218,7 +211,7 @@ public class CommandeSimple implements Observer, Commande {
     }
 
     public List<StatutMenu> getStatutsMenus(){
-        return menus.stream().map(Menu::getStatut).collect(Collectors.toList());
+        return menus.stream().map(Menu::getStatut).toList();
     }
 
     public Menu getMenuParNom(String nomMenu){
@@ -240,6 +233,14 @@ public class CommandeSimple implements Observer, Commande {
         }
         if(isReady)
             statut = StatutCommande.PRETE;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (!(o instanceof CommandeSimple)) return false;
+        CommandeSimple cs = (CommandeSimple) o;
+        return id == cs.id;
     }
 
     @Override
